Fix invisible tab name on narrow screen

--- a/ckanext/cdrc/public/less/toolbar.less
+++ b/ckanext/cdrc/public/less/toolbar.less
@@ -55,7 +55,7 @@
       display:none;
     }
     a {
-      color:#fff;
+      color:#5b6670;
       text-shadow:none;
     }
   }
